fix(traffic): remove double border

--- a/src/app/pages/dashboard/traffic/traffic.component.scss
+++ b/src/app/pages/dashboard/traffic/traffic.component.scss
@@ -13,6 +13,7 @@
     justify-content: space-between;
     padding-top: nb-theme(card-header-with-select-padding-top);
     padding-bottom: nb-theme(card-header-with-select-padding-bottom);
+    margin-bottom: -1px;
   }
 
   ngx-traffic-chart {
